# javarandom-rs

./: Cargo.toml  README.md
examples/: basic.rs
src/: java_random.rs  lib.rs
