[package]
name = "javarandom"
version = "0.1.0"
description = "Pure rust implementation of java.util.Random"
authors = ["Xydez <thexydez@gmail.com>"]
edition = "2018"
license = "Unlicense"
keywords = ["java", "random"]
categories = ["algorithms"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
