[package]
name = "javarandom"
version = "0.2.1"
description = "Pure rust implementation of java.util.Random"
repository = "https://github.com/Xydez/javarandom-rs"
authors = ["Xydez <thexydez@gmail.com>"]
edition = "2021"
license = "Unlicense"
keywords = ["java", "random"]
categories = ["algorithms"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
